Correct alignment for the link icon for RTL wikis
Bug: T106704

--- a/modules/tools/styles/ext.cx.tools.linker.less
+++ b/modules/tools/styles/ext.cx.tools.linker.less
@@ -70,7 +70,7 @@
 			padding-left: 30px;
 			.background-image-svg('../images/add_link_gray.svg', '../images/add_link_gray.png');
 			background-repeat: no-repeat;
-			background-position: 10px center;
+			background-position: left 10px center;
 			background-size: 20px;
 			background-color: #fff;
 		}
